--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/Makay131/express-handbook#readme",
   "type": "module",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-validator": "^7.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
